syntax = "proto3";
package crypto;

import "gogoproto/gogo.proto";

// PublicKey定义了用于 TRBFT 节点的密钥
message PublicKey {
  option (gogoproto.compare) = true;
  option (gogoproto.equal) = true;

  oneof sum {
    bytes ed25519 = 1;
  }
}

// 命令：protoc --gofast_out=. -I=$GOPATH/src/github.com -I=. keys.proto